[gd_scene load_steps=29 format=2]

[ext_resource path="res://Checkers/assets/black tile.jpg" type="Texture" id=1]
[ext_resource path="res://Checkers/assets/white tile.jpg" type="Texture" id=2]
[ext_resource path="res://Checkers/CheckersBoard.gd" type="Script" id=3]
[ext_resource path="res://Checkers/WhiteTeam.tscn" type="PackedScene" id=4]
[ext_resource path="res://Checkers/BlackTeam.tscn" type="PackedScene" id=5]
[ext_resource path="res://Checkers/Cursor.tscn" type="PackedScene" id=6]
[ext_resource path="res://Checkers/assets/background.jpg" type="Texture" id=7]
[ext_resource path="res://Checkers/assets/helpButtonDisabled.png" type="Texture" id=8]
[ext_resource path="res://Checkers/assets/helpButtonActive.png" type="Texture" id=9]
[ext_resource path="res://Checkers/assets/moveButtonActive.png" type="Texture" id=10]
[ext_resource path="res://Checkers/assets/endTurnActive.png" type="Texture" id=11]
[ext_resource path="res://Checkers/assets/endTurnDisabled.png" type="Texture" id=12]
[ext_resource path="res://fonts/TitilliumWebRegular.tres" type="DynamicFont" id=13]
[ext_resource path="res://fonts/EventValueFont.tres" type="DynamicFont" id=14]
[ext_resource path="res://fonts/TurnFont.tres" type="DynamicFont" id=15]
[ext_resource path="res://fonts/EventLabelFont.tres" type="DynamicFont" id=16]
[ext_resource path="res://Checkers/BuildingTeam.tscn" type="PackedScene" id=17]
[ext_resource path="res://Checkers/assets/box1.png" type="Texture" id=18]
[ext_resource path="res://Checkers/assets/box2.png" type="Texture" id=19]
[ext_resource path="res://Checkers/assets/moveButtonDisabled.png" type="Texture" id=20]
[ext_resource path="res://Checkers/assets/investButtonDisabled.png" type="Texture" id=21]
[ext_resource path="res://Checkers/assets/investButtonActive.png" type="Texture" id=22]
[ext_resource path="res://Checkers/assets/newGameActive.png" type="Texture" id=23]
[ext_resource path="res://Checkers/assets/newGameDisabled.png" type="Texture" id=24]
[ext_resource path="res://Checkers/assets/obscura.png" type="Texture" id=25]
[ext_resource path="res://Checkers/assets/black border.png" type="Texture" id=26]
[ext_resource path="res://icon.png" type="Texture" id=27]

[sub_resource type="TileSet" id=3]
0/name = "black tile.jpg 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "white tile.jpg 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="CheckersBoard" type="Node2D" groups=["BoardScene"]]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Board" type="TileMap" parent="." groups=["BoardTilemap"]]
position = Vector2( 144, 64 )
tile_set = SubResource( 3 )
centered_textures = true
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 1, 0, 2, 0, 0, 3, 1, 0, 4, 0, 0, 5, 1, 0, 6, 0, 0, 7, 1, 0, 65536, 1, 0, 65537, 0, 0, 65538, 1, 0, 65539, 0, 0, 65540, 1, 0, 65541, 0, 0, 65542, 1, 0, 65543, 0, 0, 131072, 0, 0, 131073, 1, 0, 131074, 0, 0, 131075, 1, 0, 131076, 0, 0, 131077, 1, 0, 131078, 0, 0, 131079, 1, 0, 196608, 1, 0, 196609, 0, 0, 196610, 1, 0, 196611, 0, 0, 196612, 1, 0, 196613, 0, 0, 196614, 1, 0, 196615, 0, 0, 262144, 0, 0, 262145, 1, 0, 262146, 0, 0, 262147, 1, 0, 262148, 0, 0, 262149, 1, 0, 262150, 0, 0, 262151, 1, 0, 327680, 1, 0, 327681, 0, 0, 327682, 1, 0, 327683, 0, 0, 327684, 1, 0, 327685, 0, 0, 327686, 1, 0, 327687, 0, 0, 393216, 0, 0, 393217, 1, 0, 393218, 0, 0, 393219, 1, 0, 393220, 0, 0, 393221, 1, 0, 393222, 0, 0, 393223, 1, 0, 458752, 1, 0, 458753, 0, 0, 458754, 1, 0, 458755, 0, 0, 458756, 1, 0, 458757, 0, 0, 458758, 1, 0, 458759, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Cursor" parent="." instance=ExtResource( 6 )]
position = Vector2( 144, 64 )

[node name="BuildingTeam" parent="." instance=ExtResource( 17 )]

[node name="W" parent="." instance=ExtResource( 4 )]

[node name="B" parent="." instance=ExtResource( 5 )]

[node name="ViableLocations" type="Node2D" parent="."]
position = Vector2( 144, 64 )

[node name="Tween" type="Tween" parent="."]

[node name="NewGame" type="TextureButton" parent="."]
margin_left = 9.0
margin_top = 591.0
margin_right = 119.0
margin_bottom = 625.0
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 24 )
expand = true
stretch_mode = 4

[node name="EndTurn" type="TextureButton" parent="."]
margin_left = 9.0
margin_top = 207.0
margin_right = 119.0
margin_bottom = 241.0
disabled = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_disabled = ExtResource( 12 )
expand = true
stretch_mode = 4

[node name="MoveButton" type="TextureButton" parent="."]
margin_left = 9.0
margin_top = 282.0
margin_right = 119.0
margin_bottom = 316.0
rect_pivot_offset = Vector2( 70, 17 )
disabled = true
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 20 )
texture_disabled = ExtResource( 20 )
expand = true

[node name="InvestButton" type="TextureButton" parent="."]
margin_left = 9.0
margin_top = 324.0
margin_right = 119.0
margin_bottom = 358.0
rect_pivot_offset = Vector2( 70, 17 )
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 21 )
texture_disabled = ExtResource( 21 )
expand = true

[node name="HelpButton" type="TextureButton" parent="."]
margin_left = 34.0
margin_top = 450.0
margin_right = 94.0
margin_bottom = 510.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TurnContainer" type="TextureRect" parent="."]
margin_right = 128.0
margin_bottom = 64.0
texture = ExtResource( 18 )
stretch_mode = 2

[node name="Label" type="Label" parent="TurnContainer"]
margin_right = 128.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 15 )
text = "Turn 1"
align = 1
valign = 1

[node name="EventsContainer" type="TextureRect" parent="."]
margin_top = 64.0
margin_right = 128.0
margin_bottom = 192.0
texture = ExtResource( 19 )
stretch_mode = 2

[node name="RentLabel" type="Label" parent="EventsContainer"]
margin_left = 4.0
margin_right = 128.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( -585, 320 )
custom_fonts/font = ExtResource( 16 )
text = "Rent goes up in:"
valign = 2

[node name="RentValue" type="Label" parent="EventsContainer"]
margin_top = 32.0
margin_right = 128.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( -585, 320 )
custom_fonts/font = ExtResource( 14 )
text = "3 turns"
align = 1

[node name="IncomeLabel" type="Label" parent="EventsContainer"]
margin_left = 4.0
margin_top = 56.0
margin_right = 128.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( -585, 320 )
custom_fonts/font = ExtResource( 13 )
text = "Income goes up in:"
valign = 2

[node name="IncomeValue" type="Label" parent="EventsContainer"]
margin_top = 88.0
margin_right = 128.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( -585, 320 )
custom_fonts/font = ExtResource( 14 )
text = "4 turns"
align = 1

[node name="WhiteMoney" type="Label" parent="."]
margin_left = 343.0
margin_top = 16.0
margin_right = 464.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 14 )
text = "50 + xx/turn"
valign = 1

[node name="BlackMoney" type="Label" parent="."]
margin_left = 344.0
margin_top = 592.0
margin_right = 464.0
margin_bottom = 624.0
custom_fonts/font = ExtResource( 14 )
text = "50 + xx/turn"
valign = 1

[node name="WhiteMoneySymbol" type="TextureRect" parent="."]
margin_left = 304.0
margin_top = 16.0
margin_right = 336.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( -939, 560 )
texture = ExtResource( 27 )
expand = true

[node name="BlackMoneySymbol" type="TextureRect" parent="."]
margin_left = 304.0
margin_top = 592.0
margin_right = 336.0
margin_bottom = 624.0
rect_pivot_offset = Vector2( -939, 560 )
texture = ExtResource( 27 )
expand = true

[node name="PurchasePopup" type="TextureRect" parent="."]
visible = false
margin_right = 672.0
margin_bottom = 640.0
texture = ExtResource( 25 )
expand = true

[node name="Background" type="TextureRect" parent="PurchasePopup"]
margin_left = 144.0
margin_top = 224.0
margin_right = 528.0
margin_bottom = 416.0
texture = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="PurchasePopup"]
margin_left = 208.0
margin_top = 256.0
margin_right = 464.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 14 )
text = "Do you want to buy this tile for:"
align = 1
valign = 1

[node name="ValueLabel" type="Label" parent="PurchasePopup"]
margin_left = 208.0
margin_top = 296.0
margin_right = 464.0
margin_bottom = 328.0
custom_fonts/font = ExtResource( 15 )
text = "XX $"
align = 1
valign = 1

[node name="ConfirmButton" type="TextureButton" parent="PurchasePopup"]
margin_left = 354.0
margin_top = 350.0
margin_right = 464.0
margin_bottom = 384.0
texture_normal = ExtResource( 26 )
expand = true

[node name="CancelButton" type="TextureButton" parent="PurchasePopup"]
margin_left = 208.0
margin_top = 350.0
margin_right = 319.0
margin_bottom = 384.0
texture_normal = ExtResource( 26 )
expand = true

[node name="TradePopup" type="TextureRect" parent="."]
visible = false
margin_right = 672.0
margin_bottom = 640.0
texture = ExtResource( 25 )
expand = true

[node name="Background" type="TextureRect" parent="TradePopup"]
margin_left = 144.0
margin_top = 192.0
margin_right = 528.0
margin_bottom = 448.0
texture = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="TradePopup"]
margin_left = 208.0
margin_top = 224.0
margin_right = 464.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 14 )
text = "Do you want to buy this tile from the opponent? Agree on a value:"
align = 1
valign = 1
autowrap = true

[node name="SpinBox" type="SpinBox" parent="TradePopup"]
margin_left = 208.0
margin_top = 312.0
margin_right = 464.0
margin_bottom = 344.0
max_value = 1e+18
step = 10.0

[node name="ConfirmButton" type="TextureButton" parent="TradePopup"]
margin_left = 354.0
margin_top = 382.0
margin_right = 464.0
margin_bottom = 416.0
texture_normal = ExtResource( 26 )
expand = true

[node name="CancelButton" type="TextureButton" parent="TradePopup"]
margin_left = 208.0
margin_top = 382.0
margin_right = 319.0
margin_bottom = 416.0
texture_normal = ExtResource( 26 )
expand = true

[node name="ErrorPopup" type="TextureButton" parent="."]
visible = false
margin_right = 672.0
margin_bottom = 640.0
texture_normal = ExtResource( 25 )
expand = true

[node name="Background" type="TextureRect" parent="ErrorPopup"]
margin_left = 208.0
margin_top = 288.0
margin_right = 464.0
margin_bottom = 353.0
mouse_filter = 2
texture = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="ErrorPopup"]
margin_left = 208.0
margin_top = 288.0
margin_right = 464.0
margin_bottom = 352.0
custom_fonts/font = ExtResource( 14 )
text = "Not enough money!"
align = 1
valign = 1

[node name="HelpPopup" type="TextureButton" parent="."]
margin_right = 672.0
margin_bottom = 640.0
texture_normal = ExtResource( 25 )
expand = true

[node name="Background" type="TextureRect" parent="HelpPopup"]
margin_left = 48.0
margin_top = 128.0
margin_right = 624.0
margin_bottom = 513.0
mouse_filter = 2
texture = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="HelpPopup"]
margin_left = 56.0
margin_top = 128.0
margin_right = 616.0
margin_bottom = 512.0
custom_fonts/font = ExtResource( 16 )
text = "O jogo é baseado em Damas.
Retrocesso de peão é permitido.
Ataque não é obrigatório.
Peças recebem rendimento e pagam renda por permanecer em quadrados por turno.
Jogadores começam com 50$.
Peão: 5$ + aumento de 1$/4 turnos rendimento
Quadrado: 1$ + aumento de 1$ /3 turnos renda, 10$ + aumento de 2$/3 turnos compra ou ajuste direto entre jogadores.
O valor de renda de quadrados adjacentes que sejam propriedade de jogadores aumenta.
Isto inclui peças do adversário.  

Primeiro jogador sem peças ou dinheiro perde."
valign = 1
autowrap = true

[connection signal="accept_pressed" from="Cursor" to="." method="_on_Cursor_accept_pressed"]
[connection signal="accept_pressed" from="Cursor" to="." method="_on_Cursor_accept_pressed_buymode"]
[connection signal="pressed" from="NewGame" to="." method="new_game"]
[connection signal="pressed" from="EndTurn" to="." method="_on_EndTurn_pressed"]
[connection signal="pressed" from="MoveButton" to="." method="_on_click_movemode"]
[connection signal="pressed" from="InvestButton" to="." method="_on_click_buymode"]
[connection signal="pressed" from="HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="PurchasePopup/ConfirmButton" to="." method="_on_purchase_complete"]
[connection signal="pressed" from="PurchasePopup/CancelButton" to="." method="_on_purchase_cancel"]
[connection signal="pressed" from="TradePopup/ConfirmButton" to="." method="_on_trade_complete"]
[connection signal="pressed" from="TradePopup/CancelButton" to="." method="_on_purchase_cancel"]
[connection signal="pressed" from="ErrorPopup" to="." method="_errorpopup_click"]
[connection signal="pressed" from="HelpPopup" to="." method="_helppopup_click"]
